@@ -27,6 +27,7 @@ Changelog
  * Fix: Position of options in mobile nav-menu (Jack Paine)
  * Fix: Center page editor footer regardless of screen width (Jack Paine)
  * Fix: Change the design of the navbar toggle icon so that it no longer obstructs page headers (Jack Paine)
+ * Fix: Document add/edit forms no longer render container elements for hidden fields (Jeffrey Chau)
 
 
 1.11.1 (07.07.2017)
